﻿$Revision$
	$Author$ $Date$
	1. обновлен far sdk
	2. генерируем map файл.
