@@ -1,5 +1,10 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. увеличение скорости за счет хака far
+	2. не посылаем лишний раз ECTL_REDRAW -  hешает проблему мигания курсора.
+
+#Revision: 1678
+	Author: ctapmex Date: 2011-03-15 19:38:05 +0500 (Вт, 15 мар 2011)
 	1. обновлен far sdk
 	2. генерируем map файл.
 
